--- a/_news-and-events/Photo Gallery/2020.md
+++ b/_news-and-events/Photo Gallery/2020.md
@@ -10,3 +10,4 @@ third_nav_title: Photo Gallery
 **CNY Orange Distribution**
 <iframe allowfullscreen="true" height="569" width="960" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSTO4Nj8PBV3sG98OcRs5oAva9LGSyZX0bkTcBPhwHBBbrGH2c6tsyHs6hYgtpdAVyD-ROASIxAsQ-t/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 
+**P1 Buddy**
