--- a/_news-and-events/Photo Gallery/2020.md
+++ b/_news-and-events/Photo Gallery/2020.md
@@ -5,9 +5,12 @@ description: ""
 third_nav_title: Photo Gallery
 ---
 **CNY concert**
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSMpzlOxPLvJj2M7qNexBhowZz7xqjMPGVPPGuiv4Pm7cQBAPvxrcmGHS0vfQQVr3W5W1S2bXDzm51b/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true"></iframe>
+<iframe allowfullscreen="true" height="569" width="960" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSMpzlOxPLvJj2M7qNexBhowZz7xqjMPGVPPGuiv4Pm7cQBAPvxrcmGHS0vfQQVr3W5W1S2bXDzm51b/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 
 **CNY Orange Distribution**
-<iframe allowfullscreen="true" height="569" width="960" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSTO4Nj8PBV3sG98OcRs5oAva9LGSyZX0bkTcBPhwHBBbrGH2c6tsyHs6hYgtpdAVyD-ROASIxAsQ-t/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSTO4Nj8PBV3sG98OcRs5oAva9LGSyZX0bkTcBPhwHBBbrGH2c6tsyHs6hYgtpdAVyD-ROASIxAsQ-t/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true"></iframe>
 
 **P1 Buddy**
+<iframe allowfullscreen="true" height="569" width="960" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSu02XnCtG8od9b6PSIol1_LkbcxPk1GTJeijs38Sqd1Z8QwCcnO50mV1mu2m2skRLKEmWlWMikD40d/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+**Parents' Briefing 10th Jan**
