--- a/_info-for-parents/COE 2025.md
+++ b/_info-for-parents/COE 2025.md
@@ -4,8 +4,6 @@ permalink: /info-for-parents/coe/permalink/
 description: ""
 variant: tiptap
 ---
-<h1>COE / Circulars 2024</h1>
-<h4><a href="/files/COE/2024_COE_Term_1___For_Parents.pdf" rel="noopener noreferrer nofollow" target="_blank">COE Term 1 2024</a></h4>
-<h4><a href="/files/COE/2024___COE_Term_2__6_March.pdf" rel="noopener noreferrer nofollow" target="_blank">COE Term 2 2024</a></h4>
-<h4><a href="/files/COE/Term_2_CCA_Schedule_2024.pdf" rel="noopener noreferrer nofollow" target="_blank">Term 2 CCA Schedule 2024</a></h4>
+<h1>COE / Circulars 2025</h1>
+<h4><a href="/files/COE/2025_COE___Term_1_and_Term_2___For_Parents.pdf" rel="noopener nofollow" target="_blank">COE Term 1 and Term 2 2025</a></h4>
 <p></p>
