{"message":"Update file: COE 2025.md","userId":"3535","fileName":"COE 2025.md"}

--- a/_info-for-parents/COE 2025.md
+++ b/_info-for-parents/COE 2025.md
@@ -6,4 +6,5 @@ variant: tiptap
 ---
 <h1>COE / Circulars 2025</h1>
 <h4><a href="/files/COE/2025_COE___Term_1_and_Term_2___For_Parents.pdf" rel="noopener nofollow" target="_blank">COE Term 1 and Term 2 2025</a></h4>
+<h4><a href="/files/COE/2025_COE___Term_3.pdf" rel="noopener nofollow" target="_blank">COE Term 3 2025</a></h4>
 <p></p>
